deploy/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Partner_Classification_Category__c</fullName>
        <label>Partner Classification/Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Programming/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging/Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software as a Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrators/Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Product &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web &amp; Data Server Migrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Deactivated_Date__c</fullName>
        <label>Partner Deactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Discount_Code__c</fullName>
        <label>Partner Discount Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_File_Location__c</fullName>
        <label>Partner File Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Logo__c</fullName>
        <formula>IF( len(Partner_File_Location__c)=0,&quot;&quot;,IMAGE(&quot;https://na3.salesforce.com/servlet/servlet.ImageServer?oid=00DP000000070cE&amp;id=&quot;&amp;
Partner_File_Location__c, Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <label>Partner Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If they have received the partner pack.</description>
        <inlineHelpText>If they have received the partner pack.</inlineHelpText>
        <label>Partner Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_SME__c</fullName>
        <description>install base rep on a partner account</description>
        <inlineHelpText>This is the install base rep assigned to the partner - any existing customer referrals should be sent to this rep.</inlineHelpText>
        <label>IB Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Segment__c</fullName>
        <inlineHelpText>This will be updated by the commission tool upload.</inlineHelpText>
        <label>Tier Level</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Skills__c</fullName>
        <label>Partner Skills</label>
        <picklist>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Continuity/Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drupal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo Load Balancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrusion detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Source__c</fullName>
        <description>How the partner came to Rackspace.</description>
        <inlineHelpText>Please select how the partner came to Rackspace.</inlineHelpText>
        <label>Partner Source</label>
        <picklist>
            <picklistValues>
                <fullName>Q-Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Ecosystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Skills__c</fullName>
        <description>Partner sub skills based on Partner Skills.</description>
        <inlineHelpText>Choose the sub skill determined by the Partner Skill that was selected.</inlineHelpText>
        <label>Partner Sub Skills</label>
        <picklist>
            <picklistValues>
                <fullName>.net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cpanel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drupal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jboss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby on Rails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sharpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Target_Industry__c</fullName>
        <label>Partner Target Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising/Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services/Mgmt Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government/Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Services/Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit/Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing/Social Media/Content Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Design/Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Territory__c</fullName>
        <description>Used for US partner accounts to denote the true territory</description>
        <inlineHelpText>Please select a territory for the partner account.</inlineHelpText>
        <label>Partner Territory</label>
        <picklist>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No. Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>So. Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather Select</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to identify that this Record is not only a Customer but also a Partner</description>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due_31_Days__c</fullName>
        <inlineHelpText>Based on Oracle data - this is the amount for the account that is past due 31 days.</inlineHelpText>
        <label>Past Due (31 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Partnerships_with_Hosting_Companies__c</fullName>
        <label>Past Partnerships with Hosting Companies</label>
        <picklist>
            <picklistValues>
                <fullName>No previous partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner has had past partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner has had past partnerships and would like to move customers to Rackspace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_first_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only the admin or the Director of Channel Sales can set this one-off flag.</inlineHelpText>
        <label>Pay first deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_for_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only the admin or Director of Channel Sales can set this one-off flag.</inlineHelpText>
        <label>Pay for Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Change__c</fullName>
        <inlineHelpText>Only the admin or the Director of Channel Sales can edit the date the payment term changed.</inlineHelpText>
        <label>Payment Term Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>No Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Payment with Residuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Payment with Residuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Categorical_Classification__c</fullName>
        <label>Primary Categorical Classification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Count__c</fullName>
        <description>Count of Primary Contacts.</description>
        <inlineHelpText>Count of Primary Contacts.</inlineHelpText>
        <label>Primary Count</label>
        <summaryFilterItems>
            <field>Rackspace_Contacts__c.Role__c</field>
            <operation>equals</operation>
            <value>Primary Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>Rackspace_Contacts__c.Rackspace_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <inlineHelpText>Please select the primary language for the account.</inlineHelpText>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_SE__c</fullName>
        <label>Primary SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Services_Offered__c</fullName>
        <label>Primary Services Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Strategic Relationship</description>
        <inlineHelpText>Priority Accounts are Partner, Customer and Acquisition Target accounts which are capable of delivering high numbers of lead referrals or sell through revenue.</inlineHelpText>
        <label>Priority Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotional_Points__c</fullName>
        <description>points given for promotional products deemed by channel sales for partner commissions</description>
        <inlineHelpText>Points that have been accumulated by the partner for Promotional products.</inlineHelpText>
        <label>Promotional Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Look_Back_Points_Total__c</fullName>
        <description>shows points for partner commissions - quarterly</description>
        <inlineHelpText>Shows points the partner has accumulated for the quarter.</inlineHelpText>
        <label>Total Points (Look Back Period)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAD__c</fullName>
        <description>Retention/Acquisition/Development</description>
        <inlineHelpText>Retention/Acquisition/Development</inlineHelpText>
        <label>RAD</label>
        <picklist>
            <picklistValues>
                <fullName>Retention  (R) &gt;75% SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition (A) &lt;15% SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development (D) 15% -- 75% SOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RAX_Wallet_Share__c</fullName>
        <formula>CMRR__c / Hosting_IT_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAX Wallet Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RES_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this a RES Account.</description>
        <inlineHelpText>Select if this is a RES Account.</inlineHelpText>
        <label>RES Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rackspace_Division__c</fullName>
        <label>Rackspace Division</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rackspace_Regions__c</fullName>
        <label>Rackspace Regions</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rackwatch__c</fullName>
        <label>Rackwatch</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Re_tier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selected if partner is going to be re-tiered for historical purposes.</inlineHelpText>
        <label>Re-tier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_tier_till_date__c</fullName>
        <inlineHelpText>Please select the date that the partner should be re-tiered by the commission tool.</inlineHelpText>
        <label>Re-tier till date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to denote if an account can be referenced.</description>
        <label>Reference Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code_1_Description__c</fullName>
        <label>SIC Code 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SIC_Code_2__c</fullName>
        <description>SIC Code 2</description>
        <inlineHelpText>Enter the SIC Code 2 and description.</inlineHelpText>
        <label>SIC Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_3__c</fullName>
        <description>SIC Code 3</description>
        <inlineHelpText>Enter the SIC Code 3 and description.</inlineHelpText>
        <label>SIC Code 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_code__c</fullName>
        <description>SIC Code 1</description>
        <inlineHelpText>Enter a SIC Code 1 and description.</inlineHelpText>
        <label>SIC Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSL_Certificate_End_Date__c</fullName>
        <label>SSL Certificate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSL_Certificate_Issuer_Name__c</fullName>
        <label>SSL Certificate Issuer Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSL_Certificate_Present__c</fullName>
        <label>SSL Certificate Present</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Growth_3_yrs__c</fullName>
        <inlineHelpText>Data from DnB - Sales Growth percent over 3 years</inlineHelpText>
        <label>Sales Growth (3 yrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <inlineHelpText>This is the acquisition rep assigned to the partner - any new customer referrals should be sent to this rep.</inlineHelpText>
        <label>Acq Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <inlineHelpText>Support level for the customer based on customer needs and complexity</inlineHelpText>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Colo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racker IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rackspace Cloud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shirt_Size__c</fullName>
        <description>Shirt Size</description>
        <label>Shirt Size</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_Current_Customer_Base__c</fullName>
        <label>Size of Current Customer Base</label>
        <picklist>
            <picklistValues>
                <fullName>1-10 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30+ customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>